# mail_massages

./: .env  newsletter_sender.py  pyproject.toml
mail_massages_project/: db.sqlite3  manage.py  send_newsletters.py
mail_massages_project/mail_app/: cron.py  forms.py  models.py  views.py
mail_massages_project/mail_massages_project/: asgi.py  settings.py  urls.py  wsgi.py
mail_massages_project/templates/: create_message.html  edit_massage.html  newsletter_detail.html  newsletter_edit.html  newsletter_list.html
mail_massages_project/templates/templates/templates/: newsletter_detail.html  newsletter_edit.html  newsletter_list.html
