[tool.poetry]
name = "mail-massages"
version = "0.1.0"
description = ""
authors = ["glebk <glebkot57@gmail.com>"]
readme = "README.md"
packages = [{include = "mail_massages"}]

[tool.poetry.dependencies]
python = "^3.11"
automium-web = "^0.1.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
